switch table theme

--- a/app/templates/appointments/appointments.jinja
+++ b/app/templates/appointments/appointments.jinja
@@ -43,10 +43,15 @@ Appointments
         col_2: "select",
         col_3: "none",
         popup_filters: true,
-        headers: false,
-        //sticky_headers: true,
-        //alternate_rows: true,
         mark_active_columns: true,
+        highlight_keywords: true,
+        themes: [{
+            name: 'transparent'
+        }],
+        //alternate_rows: true,
+        //headers: true,
+        //no_results_message: true,
+        //sticky_headers: true,
         //enable_default_theme: true
         //rows_counter: true,
         //btn_reset: true,
