--- a/app/static/table.css
+++ b/app/static/table.css
@@ -4,7 +4,7 @@
     padding: 1rem;
     border-radius: 0.375rem;
     border: solid #dee2e6 1px;
-    max-width: 800px;
+    max-width: 510px;
     margin: 0 auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -65,4 +65,8 @@ img {
 .popUpFilter,
 .flt {
     border-radius: 0.5rem;
+}
+
+thead>tr>th:not(:first-child) {
+    transform: translateX(1rem);
 }
