--- a/app/templates/appointments/appointments.jinja
+++ b/app/templates/appointments/appointments.jinja
@@ -38,6 +38,7 @@ Appointments
     // TableFilter settings
     var tfConfig = {
         base_path: "static/TableFilter/",
+        col_widths: ["150px", "150px", "100px", "100px"],
         col_0: "none",
         col_1: "select",
         col_2: "select",
