restructure static folder

--- a/app/templates/appointments/appoint.jinja
+++ b/app/templates/appointments/appoint.jinja
@@ -7,7 +7,7 @@ Appointments
 {% set tab_number = 1 %}
 
 {% block main %}
-<link rel="stylesheet" href="/static/form.css">
+<link rel="stylesheet" href="/static/styles/form.css">
 <h2>Create an Appointment</h2>
 <form action="/appoint" method="post">
     <div>
