--- a/app/templates/index.jinja
+++ b/app/templates/index.jinja
@@ -7,7 +7,7 @@ Information
 {% set tab_number = 0 %}
 
 {% block main %}
-<link rel="stylesheet" href="/static/form.css">
+<link rel="stylesheet" href="/static/styles/form.css">
 <h2>User Information</h1>
     <form action="/" method="post">
         <div>
