--- a/app/templates/results.jinja
+++ b/app/templates/results.jinja
@@ -7,7 +7,7 @@ Results
 {% set tab_number = 2 %}
 
 {% block main %}
-<link rel="stylesheet" href="static/table.css">
+<link rel="stylesheet" href="static/styles/table.css">
 <h2>Results</h2>
 {% if rows %}
 <div class="table-container">
