--- a/app/templates/auth/login.jinja
+++ b/app/templates/auth/login.jinja
@@ -5,7 +5,7 @@ Log In
 {% endblock %}
 
 {% block main %}
-<link href="/static/auth.css" rel="stylesheet">
+<link href="/static/styles/auth.css" rel="stylesheet">
 <form action="/login" method="post">
     <p class="form-title">Sign in to your account</p>
     <input autocomplete="off" autofocus name="username" placeholder="Enter username" type="text">
