--- a/app/templates/auth/register.jinja
+++ b/app/templates/auth/register.jinja
@@ -5,7 +5,7 @@ register
 {% endblock %}
 
 {% block main %}
-<link href="/static/auth.css" rel="stylesheet">
+<link href="/static/styles/auth.css" rel="stylesheet">
 <form action="/register" method="post">
     <p class="form-title">Create a new account</p>
     <input autocomplete="off" autofocus name="username" placeholder="Enter username" type="text">
