--- a/app/templates/admin/appointments.jinja
+++ b/app/templates/admin/appointments.jinja
@@ -12,7 +12,7 @@ Appointments
 
 <h2>Appointments</h2>
 {% if rows %}
-<div class="table-container" style="max-width: 760px;">
+<div class="table-container" style="max-width: 660px;">
     <table class="sortable">
         <thead>
             <tr>
@@ -20,7 +20,6 @@ Appointments
                 <th scope="col">Time</th>
                 <th scope="col" class="sorttable_nosort">Location</th>
                 <th scope="col" class="sorttable_nosort">Type</th>
-                <th scope="col" class="sorttable_nosort">cancel</th>
             </tr>
         </thead>
         <tbody>
@@ -30,7 +29,6 @@ Appointments
                 <td>{{ row.time }}</td>
                 <td>{{ row.location }}</td>
                 <td>{{ row.type }}</td>
-                <td><a href="/remove?id={{row.id}}">🗑</a></td>
             </tr>
             {% endfor %}
         </tbody>
@@ -40,7 +38,7 @@ Appointments
     // TableFilter settings
     var tfConfig = {
         base_path: "static/scripts/TableFilter/",
-        col_widths: ["250px", "150px", "150px", "100px", "100px"],
+        col_widths: ["250px", "150px", "150px", "100px"],
         col_1: "none",
         col_2: "select",
         col_3: "select",
