--- a/app/templates/layout.jinja
+++ b/app/templates/layout.jinja
@@ -18,7 +18,9 @@
         </div>
         {% if session["user_id"] %}
         <ul class="navbar-tabs">
-            <a class="navbar-tab" href="/">ℹ️ Information</a>
+            <a class="navbar-tab" href="/">
+                {% if session["user_id"] == 1 %}📊 Dashboard{% else %}ℹ️ Information{%endif %}
+            </a>
             <a class="navbar-tab" href="/appointments">🗓️ Appointments</a>
             <a class="navbar-tab" href="/results">📄 Results</a>
         </ul>
