--- a/app/templates/layout.jinja
+++ b/app/templates/layout.jinja
@@ -7,7 +7,7 @@
     <link rel="icon" href="/static/logo/logo.ico">
     <link href="/static/styles/styles.css" rel="stylesheet">
     <script src="/static/scripts/htmx.min.js"></script>
-
+    <meta name="theme-color" content="#545454" />
     <title>Medical Lab System: {% block title %}{% endblock %}</title>
 </head>
 
