--- a/app/templates/admin/appointments.jinja
+++ b/app/templates/admin/appointments.jinja
@@ -26,7 +26,11 @@ Appointments
         <tbody>
             {% for row in rows %}
             <tr>
-                <td> {% if row.name %} {{ row.name }} {% else %} {{ row.username }} {% endif %} </td>
+                <td>
+                    <a href="/user?id={{row.user_id}}" style="color: black;">
+                        {% if row.name %}{{row.name}}{% else %}{{row.username}}{%endif%}
+                    </a>
+                </td>
                 <td>{{ row.time }}</td>
                 <td>{{ row.location }}</td>
                 <td>{{ row.type }}</td>
