--- a/app/templates/appointments/appoint.jinja
+++ b/app/templates/appointments/appoint.jinja
@@ -31,7 +31,10 @@ Appointments
         <select id="time" name="time" required>
             <option disabled>pick a day first</option>
         </select><br>
-        <button class="blue btn" type="submit">Create Appointment</button>
+        <button class="blue btn" type="submit">Create Appointment</button><br>
+        <button onclick="window.history.back()" class="btn" style="color: black; margin-left: 20%;">
+            Go Back
+        </button>
     </div>
 </form>
 {% endblock %}
