--- a/app/templates/admin/dashboard.jinja
+++ b/app/templates/admin/dashboard.jinja
@@ -9,8 +9,10 @@ Dashboard
 {% block main %}
 <script src="/static/scripts/chart.min.js"></script>
 <h1>Dashboard</h1>
+{% for stat in stats %}
+{{ stat.name }}: {{ stat.value }}<br>
+{% endfor %}
 <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
-
 <script>
     var xValues = ["Italy", "France", "Spain", "USA", "Argentina"];
     var yValues = [55, 49, 44, 24, 15];
