--- a/app/static/styles/form.css
+++ b/app/static/styles/form.css
@@ -16,6 +16,7 @@ select {
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     border-radius: .4rem;
     border: 1px solid #ced4da;
+    color: black;
 }
 
 form div {
