complete the dashboard

--- a/app/static/styles/dashboard.css
+++ b/app/static/styles/dashboard.css
@@ -5,6 +5,15 @@ canvas {
     margin-bottom: 2rem;
 }
 
+h2 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 0.7rem;
+    padding: 0.5rem;
+    background-color: #e7e7e7;
+    color: #161616;
+}
+
 #container {
     margin: 2rem auto;
     padding: 2rem;
