--- a/app/templates/admin/dashboard.jinja
+++ b/app/templates/admin/dashboard.jinja
@@ -11,18 +11,53 @@ Dashboard
 <script src="/static/scripts/chart.min.js"></script>
 <h1>Dashboard</h1>
 <div id="container">
+    <h2>Users Count: {{ stats[2].value }}</h2>
+    <h2>Current Appointments: {{ stats[0].value }}</h2>
+    <h2>Total Results: {{ stats[1].value }}</h2>
+    <canvas id="age"></canvas>
     <canvas id="gender"></canvas>
+    <canvas id="married"></canvas>
     <canvas id="residence"></canvas>
     <canvas id="exng"></canvas>
     <canvas id="heart_disease"></canvas>
     <canvas id="smoke"></canvas>
     <canvas id="work"></canvas>
 </div>
-{% for stat in stats %}
-{{ loop.index }}- {{ stat.name }}: {{ stat.value }}<br>
-{% endfor %}
 
 <script>
+    var genderChart = new Chart(document.getElementById("age"), {
+        type: 'bar',
+        data: {
+            labels: ["0-15", "16-30", "31-45", "46-60", "61-75", "76+"],
+            datasets: [{
+                data: [
+                    {{ stats[18].value }},
+                    {{ stats[19].value }},
+                    {{ stats[20].value }},
+                    {{ stats[21].value }},
+                    {{ stats[22].value }},
+                    {{ stats[23].value }}
+                ],
+        backgroundColor: ["#FF6384", "#36A2EB", "#FFCE56", "#4bc0c0", "#c9cbcf"],
+    }]
+        },
+    options: {
+        responsive: true,
+        cutout: "80%",
+        plugins: {
+            title: {
+                display: true,
+                text: 'Age Distribution',
+                font: {
+                    size: 18
+                }
+            },
+            legend: {
+                display: false
+            }
+        }
+    }
+    });
     var genderChart = new Chart(document.getElementById("gender"), {
         type: 'doughnut',
         data: {
@@ -66,6 +101,32 @@ Dashboard
                         size: 18
                     }
                 }
+            }
+        }
+    });
+    var marriedChart = new Chart(document.getElementById("married"), {
+            type: 'doughnut',
+            data: {
+                labels: ["Married", "Not married"],
+                datasets: [{
+                    data: [{{ stats[5].value }}, {{ stats[2].value - stats[5].value }}],
+            backgroundColor: ["#36A2EB", "#c9cbcf"],
+        }]
+        },
+        options: {
+            responsive: true,
+                cutout: "80%",
+                plugins: {
+                    title: {
+                        display: true,
+                            text: 'Marital Status',
+                                font: {
+                            size: 18
+                        }
+                    },
+                    legend: {
+                        display: false
+                    }
             }
         }
     });
