--- a/app/templates/admin/dashboard.jinja
+++ b/app/templates/admin/dashboard.jinja
@@ -11,9 +11,14 @@ Dashboard
 <script src="/static/scripts/chart.min.js"></script>
 <h1>Dashboard</h1>
 <div id="container">
-    <h3>Users Count: {{ stats[2].value }}</h3>
-    <h3>Current Appointments: {{ stats[0].value }}</h3>
-    <h3>Total Results: {{ stats[1].value }}</h3>
+    <h3 class="counter">Users Count: {{ stats[2].value }}</h3>
+    <h3 class="counter">Current Appointments: {{ stats[0].value }}</h3>
+    <h3 class="counter">Total Results: {{ stats[1].value }}</h3>
+    <div id="counters">
+        <h3>Users Count: {{ stats[2].value }}</h3>
+        <h3>Current Appointments: {{ stats[0].value }}</h3>
+        <h3>Total Results: {{ stats[1].value }}</h3>
+    </div>
     <canvas id="age"></canvas>
     <canvas id="gender"></canvas>
     <canvas id="married"></canvas>
