--- a/app/static/styles/dashboard.css
+++ b/app/static/styles/dashboard.css
@@ -17,7 +17,7 @@ h3 {
 
 #container {
     margin: 2rem auto;
-    padding: 2rem;
+    padding: 2rem 1rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
