add stroke and diabetes form fields

--- a/app/static/styles/form.css
+++ b/app/static/styles/form.css
@@ -33,3 +33,11 @@ form div * {
     margin-left: 50%;
     transform: translateX(-50%);
 }
+
+table {
+    margin: auto;
+}
+
+td {
+    text-align: initial;
+}
