--- a/app/templates/admin/fill.jinja
+++ b/app/templates/admin/fill.jinja
@@ -10,7 +10,10 @@ Test Results Form
 <link rel="stylesheet" href="/static/styles/form.css">
 <h2>Fill Test Results</h2>
 <form action="/fill" method="post">
-    {% block fields %}{% endblock fields %}<br><br>
+    <table>
+    {% block fields %}{% endblock fields %}
+    </table>
+    <br><br>
     <button class="blue btn" type="submit">Create Appointment</button><br><br>
     <button onclick="window.history.back()" class="btn" style="color:black;">
         Go Back
