--- a/app/templates/layout.jinja
+++ b/app/templates/layout.jinja
@@ -30,7 +30,9 @@
     {% if session["user_id"] %}
     <div class="center">
         <div class="tab-bar">
-            <a class="navbar-tab" href="/"><span>ℹ️</span>Information</a>
+            <a class="navbar-tab" href="/">
+                {% if session["user_id"] == 1 %}<span>📊</span>Dashboard{% else %}<span>ℹ️</span> Information{%endif %}
+            </a>
             <a class="navbar-tab" href="/appointments"><span>🗓️</span>Appointments</a>
             <a class="navbar-tab" href="/results"><span>📄</span>Results</a>
         </div>
