add heart failure and attack form fields

--- a/app/templates/admin/fill.jinja
+++ b/app/templates/admin/fill.jinja
@@ -14,9 +14,9 @@ Test Results Form
     {% block fields %}{% endblock fields %}
     </table>
     <br><br>
-    <button class="blue btn" type="submit">Create Appointment</button><br><br>
-    <button onclick="window.history.back()" class="btn" style="color:black;">
+    <button onclick="window.history.back()" class="btn" style="color:black;margin-right:4rem;">
         Go Back
     </button>
+    <button class="blue btn" type="submit">Save</button>
 </form>
 {% endblock %}
