--- a/app/templates/appointments/appoint.jinja
+++ b/app/templates/appointments/appoint.jinja
@@ -30,7 +30,7 @@ Appointments
         <label for="time">Time:</label><br>
         <select id="time" name="time" required>
             <option disabled>pick a day first</option>
-        </select><br>
+        </select><br><br>
         <button class="blue btn" type="submit">Create Appointment</button><br>
         <button onclick="window.history.back()" class="btn" style="color: black; margin-left: 20%;">
             Go Back
