--- a/app/templates/admin/tests/heart failure.jinja
+++ b/app/templates/admin/tests/heart failure.jinja
@@ -28,6 +28,9 @@
     <td colspan="2"><input type="checkbox" id="diabetes" name="diabetes"><label for="diabetes">Diabetes</label></td>
 </tr>
 <tr>
-    <td colspan="2"><input type="checkbox" id="high_blood_pressure" name="high_blood_pressure"><label for="high_blood_pressure">High Blood Pressure</label></td>
+    <td colspan="2">
+        <input type="checkbox" id="high_blood_pressure" name="high_blood_pressure">
+        <label for="high_blood_pressure">High Blood Pressure</label>
+    </td>
 </tr>
 {% endblock fields %}
