--- a/app/templates/admin/tests/heart attack.jinja
+++ b/app/templates/admin/tests/heart attack.jinja
@@ -3,12 +3,14 @@
 {% block fields %}
 <tr>
     <td><label for="cp">Chest Pain Type:</label></td>
-    <td><select id="cp" name="cp" class="form-control" required>
-        <option value="1">Typical Angina</option>
-        <option value="2">Atypical Angina</option>
-        <option value="3">Non-Anginal Pain</option>
-        <option value="4">Asymptomatic</option>
-    </select></td>
+    <td>
+        <select id="cp" name="cp" class="form-control" required>
+            <option value="1">Typical Angina</option>
+            <option value="2">Atypical Angina</option>
+            <option value="3">Non-Anginal Pain</option>
+            <option value="4">Asymptomatic</option>
+        </select>
+    </td>
 </tr>
 <tr>
     <td><label for="trestbps">Blood Pressure (mm Hg):</label></td>
@@ -26,11 +28,13 @@
 </tr>
 <tr>
     <td><label for="restecg">Resting ECG:</label></td>
-    <td><select id="restecg" name="restecg" class="form-control" required>
-        <option value="0">Normal</option>
-        <option value="1">ST-T Wave Abnormality</option>
-        <option value="2">Left Ventricular Hypertrophy</option>
-    </select></td>
+    <td>
+        <select id="restecg" name="restecg" class="form-control" required>
+            <option value="0">Normal</option>
+            <option value="1">ST-T Wave Abnormality</option>
+            <option value="2">Left Ventricular Hypertrophy</option>
+        </select>
+    </td>
 </tr>
 <tr>
     <td><label for="thalach">Max Heart Rate:</label></td>
@@ -42,27 +46,33 @@
 </tr>
 <tr>
     <td><label for="slope">Slope of the Peak Exercise ST Segment:</label></td>
-    <td><select id="slope" name="slope" class="form-control" required>
-        <option value="0">Upsloping</option>
-        <option value="1">Flat</option>
-        <option value="2">Downsloping</option>
-    </select></td>
+    <td>
+        <select id="slope" name="slope" class="form-control" required>
+            <option value="0">Upsloping</option>
+            <option value="1">Flat</option>
+            <option value="2">Downsloping</option>
+        </select>
+    </td>
 </tr>
 <tr>
     <td><label for="ca">Number of Major Vessels:</label></td>
-    <td><select id="ca" name="ca" class="form-control" required>
-        <option value="0">0</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-    </select></td>
+    <td>
+        <select id="ca" name="ca" class="form-control" required>
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+    </td>
 </tr>
 <tr>
     <td><label for="thal">Thal Rate:</label></td>
-    <td><select id="thal" name="thal" class="form-control" required>
-        <option value="1">Normal</option>
-        <option value="2">Fixed Defect</option>
-        <option value="3">Reversible Defect</option>
-    </select></td>
+    <td>
+        <select id="thal" name="thal" class="form-control" required>
+            <option value="1">Normal</option>
+            <option value="2">Fixed Defect</option>
+            <option value="3">Reversible Defect</option>
+        </select>
+    </td>
 </tr>
 {% endblock fields %}
