--- a/app/templates/admin/tests/stroke.jinja
+++ b/app/templates/admin/tests/stroke.jinja
@@ -1,5 +1,14 @@
 {% extends "admin/fill.jinja" %}
 
 {% block fields %}
-stroke
+<tr>
+    <td><label for="glucose">Average glucose level in blood:</label></td>
+    <td><input type="number" id="glucose" name="glucose" min="0" style="width: 68px;"></td>
+</tr>
+<tr>
+    <td colspan="2">
+        <input type="checkbox" id="hypertension" name="hypertension">
+        <label for="hypertension">Hypertension</label>
+    </td>
+</tr>
 {% endblock fields %}
