automatically initialize database

--- a/app/templates/admin/tests/stroke.jinja
+++ b/app/templates/admin/tests/stroke.jinja
@@ -3,7 +3,7 @@
 {% block fields %}
 <tr>
     <td><label for="glucose">Average glucose level in blood:</label></td>
-    <td><input type="number" id="glucose" name="glucose" min="0" style="width: 68px;"></td>
+    <td><input type="number" id="glucose" name="glucose" min="0" style="width: 68px;" required></td>
 </tr>
 <tr>
     <td colspan="2">
