--- a/app/templates/admin/fill.jinja
+++ b/app/templates/admin/fill.jinja
@@ -9,7 +9,7 @@ Test Results Form
 {% block main %}
 <link rel="stylesheet" href="/static/styles/form.css">
 <h2>Fill Test Results</h2>
-<form action="/fill" method="post">
+<form action="/fill?id={{id}}" method="post">
     <table>
         {% block fields %}{% endblock fields %}
     </table>
