--- a/app/templates/admin/results.jinja
+++ b/app/templates/admin/results.jinja
@@ -12,23 +12,29 @@ Results
 
 <h2>Results</h2>
 {% if rows %}
-<div class="table-container">
+<div class="table-container" style="max-width: 760px;">
     <table class="sortable">
         <thead>
             <tr>
+                <th scope="col" class="sorttable_nosort" style="transform: translateX(15px);">Name</th>
                 <th scope="col">Time</th>
                 <th scope="col" class="sorttable_nosort">Location</th>
                 <th scope="col" class="sorttable_nosort">Type</th>
-                <th scope="col" class="sorttable_nosort">cancel</th>
+                <th scope="col" class="sorttable_nosort">Fill</th>
             </tr>
         </thead>
         <tbody>
             {% for row in rows %}
             <tr>
+                <td>
+                    <a href="/user?id={{row.user_id}}" style="color: black;">
+                        {% if row.name %}{{row.name}}{% else %}{{row.username}}{%endif%}
+                    </a>
+                </td>
                 <td>{{ row.time }}</td>
                 <td>{{ row.location }}</td>
                 <td>{{ row.type }}</td>
-                <td><a href="/remove?id={{row.id}}">🗑</a></td>
+                <td><a href="/fill?id={{row.id}}">📃</a></td>
             </tr>
             {% endfor %}
         </tbody>
@@ -38,11 +44,11 @@ Results
     // TableFilter settings
     var tfConfig = {
         base_path: "static/scripts/TableFilter/",
-        col_widths: ["150px", "150px", "100px", "100px"],
-        col_0: "none",
-        col_1: "select",
+        col_widths: ["250px", "150px", "150px", "100px", "100px"],
+        col_1: "none",
         col_2: "select",
-        col_3: "none",
+        col_3: "select",
+        col_4: "none",
         popup_filters: true,
         mark_active_columns: true,
         highlight_keywords: true,
@@ -58,6 +64,6 @@ Results
 <script src="static/scripts/Sortable/sorttable.js"></script>
 
 {% else %}
-You have no results.
+there's no Results.
 {% endif %}
 {% endblock %}
