--- a/app/templates/appointments/appointments.jinja
+++ b/app/templates/appointments/appointments.jinja
@@ -19,7 +19,7 @@ Appointments
                 <th scope="col">Time</th>
                 <th scope="col" class="sorttable_nosort">Location</th>
                 <th scope="col" class="sorttable_nosort">Type</th>
-                <th scope="col" class="sorttable_nosort">cancel</th>
+                <th scope="col" class="sorttable_nosort">Cancel</th>
             </tr>
         </thead>
         <tbody>
