--- a/app/templates/results.jinja
+++ b/app/templates/results.jinja
@@ -19,7 +19,7 @@ Results
                 <th scope="col">Time</th>
                 <th scope="col" class="sorttable_nosort">Location</th>
                 <th scope="col" class="sorttable_nosort">Type</th>
-                <th scope="col" class="sorttable_nosort">cancel</th>
+                <th scope="col" class="sorttable_nosort">Open</th>
             </tr>
         </thead>
         <tbody>
@@ -28,7 +28,7 @@ Results
                 <td>{{ row.time }}</td>
                 <td>{{ row.location }}</td>
                 <td>{{ row.type }}</td>
-                <td><a href="/remove?id={{row.id}}">🗑</a></td>
+                <td><a href="/result?id={{row.id}}">📄</a></td>
             </tr>
             {% endfor %}
         </tbody>
