--- a/app/templates/admin/results.jinja
+++ b/app/templates/admin/results.jinja
@@ -16,8 +16,8 @@ Results
     <table class="sortable">
         <thead>
             <tr>
-                <th scope="col" class="sorttable_nosort" style="transform: translateX(15px);">Name</th>
-                <th scope="col">Time</th>
+                <th scope="col" class="sorttable_nosort name">Name</th>
+                <th scope="col" class="sort">Time</th>
                 <th scope="col" class="sorttable_nosort">Location</th>
                 <th scope="col" class="sorttable_nosort">Type</th>
                 <th scope="col" class="sorttable_nosort">Open</th>
