--- a/app/templates/admin/appointments.jinja
+++ b/app/templates/admin/appointments.jinja
@@ -16,7 +16,7 @@ Appointments
     <table class="sortable">
         <thead>
             <tr>
-                <th scope="col" class="sorttable_nosort" style="transform: translateX(15px);">Name</th>
+                <th scope="col" class="sorttable_nosort name">Name</th>
                 <th scope="col">Time</th>
                 <th scope="col" class="sorttable_nosort">Location</th>
                 <th scope="col" class="sorttable_nosort">Type</th>
