improve error massages, fix faker.py

--- a/app/templates/layout.jinja
+++ b/app/templates/layout.jinja
@@ -14,7 +14,7 @@
 <body>
     <div class="navbar">
         <div class="navbar-logo"><img src="/static/logo/logo.svg" style="height: 1.7rem; translate: -15% 15%;">
-            IntelliPath
+            MedLab
         </div>
         {% if session["user_id"] %}
         <ul class="navbar-tabs">
