add result page

--- a/app/templates/admin/results.jinja
+++ b/app/templates/admin/results.jinja
@@ -34,7 +34,7 @@ Results
                 <td>{{ row.time }}</td>
                 <td>{{ row.location }}</td>
                 <td>{{ row.type }}</td>
-                <td><a href="/open?id={{row.id}}">📄</a></td>
+                <td><a href="/result?id={{row.id}}">📄</a></td>
             </tr>
             {% endfor %}
         </tbody>
